# franka_prisma_master_thesis

./: .dockerignore  .env  .gitignore  Commands.txt  Dockerfile  Perception_Pipeline_Walkthrough.md  README.md  Reasoning_Pipeline_Walkthrough.md  antigravity.yaml  architecture.txt  architettura.txt  commands.txt  cyclonedds.xml  docker-compose.yml  env.example  frames_2026-02-17_15.18.46.gv  framework_status.md  launcher.sh  perception_diagram.dot  reasoning_diagram.dot  resim.sh  ros_entrypoint.sh  ssh_falcini.pub  sshfalco  sshfalco.pub  stopper.sh  test_gemini.py  test_pick_standalone.py  test_py_trees.py  vlm_decision.json  workday_recap_2026_04_17.md
Diagrams/: VLM-BT-MTC.txt  overall-Architecture.txt
docs/: Bimanual_Franka_Simulation_Walkthrough.md  Commands.txt  Franka_Desk_Instructions.md  Perception_Pipeline_Walkthrough.md  REAL_WORKSPACE_GEOMETRY.txt  Reasoning_Pipeline_Walkthrough.md  architecture.txt  architecture_summary.txt  future_expansions.txt  session_2026-03-24.txt  session_2026-03-31.txt  session_2026-04-01.txt  session_2026-04-04_bimanual_handover.md
docs/assets/Diagrams/: mermaid_codes.txt  overall-Architecture.txt
framework_docs/: FRAMEWORK_DETAILS_EN.md  FRAMEWORK_OVERVIEW.md  FRAMEWORK_VISUAL_LOGIC.md  RENDEZVOUS_THEORY.md
framework_docs/manipulability_analysis/: dual_arm_manipulability.py
scripts/: check_frames.py  test_gemini.py  test_vision_pick.py
src/: start_lab.sh  stop_lab.sh
src/fr3_application/: package.xml  setup.py
src/fr3_application/fr3_application/: config.py  fr3_pnp_node.py  object_localization_node.py  skills_repertoire.py  test_integrated_pipeline.py  test_localization_client.py  test_mock_camera.py  test_vlm_vision.py  vlm_client_node.py  vlm_server_node.py
src/fr3_application/launch/: perception.launch.py  reasoning.launch.py  run_pnp.launch.py
src/fr3_executor/: CMakeLists.txt  package.xml
src/fr3_executor/launch/: executor.launch.py
src/fr3_mtc_executor/: CMakeLists.txt  package.xml
src/fr3_mtc_executor/launch/: mtc_executor.launch.py
src/fr3_mtc_executor/scripts/: test_skills.py
src/fr3_mtc_executor/src/: mtc_action_servers_node.cpp
src/franka_action_server/: CMakeLists.txt  package.xml
src/franka_action_server/launch/: action_server.launch.py
src/franka_action_server/src/: pick_server.cpp
src/franka_bimanual_bringup/: CMakeLists.txt  package.xml
src/franka_bimanual_bringup/launch/: executor.launch.py  gripper_test.launch.py  parallel_test_backends.launch.py
src/franka_bimanual_bringup/scripts/: automate_scenarios.py  calibrate_with_bottle.py  force_calibration.py  gripper_test.py  test_handover.py  test_perception_logic.py  test_skills.py  validate_tamp.py  verify_calibration.py  verify_calibration_apriltag.py
src/franka_bimanual_bringup/scripts/automate_scenarios/: README_SCENARIOS.md  atom_bimanual_handshake.py  atom_heterogeneous_stress.py  atom_parallel_main_engine.py  atom_parallel_offset.py  atom_parallel_pick_place.py  atom_parallel_test_intermediate.py  atom_synch_home.py  handover_optimizer.py
src/franka_bimanual_bringup/scripts/automate_scenarios/json_plans/: coordinated_1.json  generic_pick.json  indirect_handover.json  indirect_handover_sync.json  parallel_pick.json  robust_handover.json  sequential_pick.json  shared_zone_stress_test.json  simple_test.json  v2_handover.json
src/franka_bimanual_config/: fix_camera.py
src/franka_bimanual_orchestrator/: package.xml  setup.cfg  setup.py
src/franka_bimanual_planner/: CMakeLists.txt  package.xml
src/franka_bimanual_planner/launch/: bimanual_planner.launch.py
src/franka_bimanual_planner/src/: bimanual_planner_node.cpp  jtc_bridge_node.cpp
src/franka_bimanual_skills/: package.xml  setup.cfg  setup.py  test_vision_pick.py
src/franka_custom_interfaces/: CMakeLists.txt  package.xml
src/franka_custom_interfaces/action/: DetectObject.action  MoveHome.action  MtcPickObject.action  MtcPlaceObject.action  ParallelMove.action  PlaceObject.action  TakeObject.action  VlmQuery.action
src/franka_custom_interfaces/srv/: ClearOctomap.srv  HandoverReady.srv  vlm_query.srv
src/franka_manipulation_env/: CMakeLists.txt  README.md  fix_camera.py  package.xml
src/franka_manipulation_env/config/: apriltag.yaml  basic_controllers_custom.yaml  fr3_controllers.yaml  joint_limits_bimanual.yaml  joint_limits_fr3_custom.yaml  kinematics_bimanual.yaml  moveit_controllers_bimanual.yaml  ompl_planning_bimanual_override.yaml  ompl_planning_override.yaml  robot_poses.yaml  vision_bridge.yaml
src/franka_manipulation_env/config/redundant_configs/: moveit_controllers.yaml
src/franka_manipulation_env/launch/: custom_bimanual.launch.py  demo_moveit.launch.py  demo_moveit_bimanual.launch.py  lab_bringup_final.launch.py  moveit_bimanual.launch.py  moveit_core.launch.py  sim_and_control.launch.py  sim_objects.launch.py
src/franka_manipulation_env/models/cube/: model.config  model.sdf
src/franka_manipulation_env/models/overhead_camera/: model.config  model.sdf
src/franka_manipulation_env/models/table/: model.config  model.sdf
src/franka_manipulation_env/rviz/: bimanual_moveit.rviz
src/franka_manipulation_env/srdf/: bimanual_sim_srdf.xacro
src/franka_manipulation_env/urdf/: bimanual_custom.urdf.xacro  gazebo.xacro  system.urdf.xacro
src/franka_manipulation_env/worlds/: bimanual_custom.world  pick_place.world
src/franka_mtc_cpp_server/: CMakeLists.txt  package.xml
src/franka_mtc_cpp_server/launch/: mtc_server.launch.py
src/franka_mtc_cpp_server/src/: mtc_pick_server.cpp
src/franka_task_orchestrator/: package.xml  setup.cfg  setup.py
(+75 files in other folders)
