cmake_minimum_required(VERSION 3.8)
project(franka_custom_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(geometry_msgs REQUIRED)

# Generazione delle interfacce custom
rosidl_generate_interfaces(${PROJECT_NAME}
  "action/DetectObject.action"
  "action/MtcPickObject.action"
  "action/MtcPlaceObject.action"
  "srv/ClearOctomap.srv"
  DEPENDENCIES geometry_msgs
)

ament_package()